# mp3-player

./: CMakeLists.txt  README.md
inc/libavutil/: ffversion.h
src/: main.cpp  main.h
